@@ -25,7 +25,8 @@ Changes log
  - Renamed TunnelFilter into org.restlet.Tunnel.
  - Refactor data model of StringTemplate. New org.restlet.util.DataModel added, Model, ReadableModel and WritableModel removed.
  - Replace Representation.toString() by getValue() to prevent unwanted consumption of the content. Reported by Vincent Lari.
-
+ - Renamed NRE's LogFileHandler and LogFormatter to AccessLogFileHandler and AccessLogFormatter (use for WWW access logs).
+ 
 [Other changes] 
  - Reorganized Javadocs into three parts: Restlet API, Restlet Extensions, Noelios Restlet Engine.
  - Added JSON library as an external plugin project. See http://www.json.org
